// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`linearColor 1`] = `
{
  "annotation": {},
  "chartType": "radar",
  "config": {
    "radar": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "radar": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 200000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 200000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 210000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 210000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 400000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 400000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 220000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 220000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 600000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 600000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 230000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 230000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 800000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 800000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 340000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 340000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1000000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1000000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 450000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 450000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1200000,
      "__Dim_Detail__": "2019-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1200000,
      "__Dim_Detail__": "2019-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 560000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 560000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 200000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 200000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 110000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 110000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 400000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 400000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 320000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 320000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 600000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 600000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 430000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 430000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 800000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 800000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 540000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 540000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1000000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1000000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 250000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 250000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1200000,
      "__Dim_Detail__": "2020-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 1200000,
      "__Dim_Detail__": "2020-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 610000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 610000,
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          200000,
          1200000,
        ],
        "foldMap": {
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          110000,
          1200000,
        ],
        "measureValue": "__MeaValue__",
      },
      "id": "radar",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {},
        "colorItems": [],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "month",
    ],
    "color": [
      "sales",
    ],
    "detail": [
      "__MeaName__",
      "year",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
  ],
}
`;

exports[`linearColor 2`] = `
{
  "angleField": "__Dim_Angle__",
  "animation": true,
  "area": {
    "style": {
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
    },
    "visible": true,
  },
  "axes": [
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "nice": true,
      "orient": "angle",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "label": {
        "visible": true,
      },
      "nice": true,
      "orient": "radius",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      {
        "dataId": "radar",
        "fields": [
          "__Dim_Color__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "radar",
    "values": [
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 200000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 200000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 400000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 400000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 600000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 600000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 800000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 800000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1000000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1000000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1200000,
        "__Dim_Detail__": "2019-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1200000,
        "__Dim_Detail__": "2019-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 200000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 200000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 400000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 400000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 600000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 600000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 800000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 800000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1000000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1000000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1200000,
        "__Dim_Detail__": "2020-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 1200000,
        "__Dim_Detail__": "2020-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
  },
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "endText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "field": "__Dim_Color__",
    "maxWidth": "30%",
    "orient": "right",
    "padding": 0,
    "position": "start",
    "startText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "type": "color",
    "visible": true,
  },
  "line": {
    "style": {
      "stroke": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
    },
  },
  "padding": 0,
  "point": {
    "state": {
      "dimension_hover": {
        "outerBorder": {
          "distance": 2,
          "lineWidth": 4,
          "strokeOpacity": 0.25,
        },
        "scaleX": 1.4,
        "scaleY": 1.4,
      },
    },
    "style": {
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
    },
  },
  "radiusField": "__MeaValue__",
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_Detail__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "radar",
}
`;
